# CustomIDE

./: .gitignore  Cargo.toml  test.py
crates/ide-cli/: Cargo.toml
crates/ide-cli/src/: main.rs
crates/ide-core/: Cargo.toml
crates/ide-core/src/: commands.rs  dap.rs  errors.rs  events.rs  fs_service.rs  lib.rs  lsp.rs  process.rs  pty.rs  pyright.rs  pytest.rs  python_env.rs  ruff.rs  search.rs  settings.rs  workspace.rs
crates/ide-shell/: Cargo.toml  tauri.conf.json
crates/ide-shell/capabilities/: default.json
crates/ide-shell/src/: main.rs
docs/: bug-tracker.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: commands.ts  editor.ts  explorer.ts  ipc.ts  main.ts  menus.ts  modal.ts  problems.ts  runTarget.ts  styles.css  tabs.ts  terminal.ts
