[workspace]
resolver = "2"
members = ["crates/ide-core", "crates/ide-cli", "crates/ide-shell"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
notify = "6"
notify-debouncer-full = "0.3"
ignore = "0.4"
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
portable-pty = "0.8"
lsp-types = "0.95"
which = "6"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
walkdir = "2"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
lto = "thin"
codegen-units = 1
