[package]
name = "ide-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ide-core = { path = "../ide-core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
