[package]
name = "ide-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
ignore.workspace = true
grep.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
grep-matcher.workspace = true
portable-pty.workspace = true
lsp-types.workspace = true
which.workspace = true
dirs.workspace = true
uuid.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
walkdir.workspace = true
