[package]
name = "ide-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri desktop shell for CustomIDE"

[[bin]]
name = "ide-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
ide-core = { path = "../ide-core" }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
